--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -29,7 +29,10 @@
             <td th:text="${post.title}">post title</td>
             <td th:text="${post.shortDescription}">post short description</td>
             <td th:text="${post.createdOn}">post created date</td>
-            <td></td>
+            <td>
+                <a th:href="@{/admin/posts/{postId}/edit(postId=${post.id})}" class="btn btn-primary">Edit</a>
+
+            </td>
         </tr>
         </tbody>
 
