add implementation of delete post feature

--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -31,7 +31,7 @@
             <td th:text="${post.createdOn}">post created date</td>
             <td>
                 <a th:href="@{/admin/posts/{postId}/edit(postId=${post.id})}" class="btn btn-primary">Edit</a>
-
+                <a th:href="@{/admin/posts/{postId}/delete(postId=${post.id})}" class="btn btn-danger">Delete</a>
             </td>
         </tr>
         </tbody>
