--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -7,7 +7,7 @@
 
 
 <footer class="footer-copyright text-center bg-dark py-3"
-        style="position:fixed; height:80px; width:100%; bottom:0"
+        style="position:fixed; height:80px; width:100%; bottom:0; color:white"
         th:fragment="footer"
 >
     <div>
