--- a/src/main/resources/templates/admin/posts.html
+++ b/src/main/resources/templates/admin/posts.html
@@ -10,9 +10,25 @@
 <div class="container-300">
     <div class="row">
         <h1>List Blog Posts</h1>
-
     </div>
 
+    <div class="row">
+        <div class="col-md-5">
+            <div class="form-group">
+                <form class="form-inline" th:action="@{/admin/posts/search}">
+                    <div class="input-group">
+                        <input type="text" class="form-control" name="query"/>
+                        <span class="input-group-btn">
+                        <button class="btn btn-primary" type="submit">Search</button>
+                        </span>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <br/>
     <table class="table table-striped table-hover table-bordered">
         <thead class="table-dark">
         <th style="width:10%">#</th>
@@ -28,7 +44,7 @@
             <td th:text="${postStat.count}">1</td> <!--count the iteration -->
             <td th:text="${post.title}">post title</td>
             <td th:text="${post.shortDescription}">post short description</td>
-            <td th:text="${post.createdOn}">post created date</td>
+            <td th:text="${#temporals.format(post.createdOn, 'dd MMM yyyy')}">post created date</td>
             <td>
                 <a th:href="@{/admin/posts/{postId}/edit(postId=${post.id})}" class="btn btn-primary">Edit</a>
                 <a th:href="@{/admin/posts/{postId}/delete(postId=${post.id})}" class="btn btn-danger">Delete</a>
