--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{/admin/posts/newpost}">New Post</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/admin/posts/comments}">Comments</a>
+                </li>
             </ul>
         </div>
     </div>
