--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{/admin/posts/comments}">Comments</a>
                 </li>
+                <li class="nav-item">
+                    <a aria-current="page" class="nav-link active" th:href="@{/logout}" >Logout</a>
+                </li>
             </ul>
         </div>
     </div>
