--- a/src/main/resources/templates/blog/header.html
+++ b/src/main/resources/templates/blog/header.html
@@ -4,7 +4,7 @@
 >
 <head th:fragment="header">
     <meta charset="UTF-8">
-    <title>Spring Boot Thymeleaf Blog App </title>
+    <title>My Blog App </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -14,7 +14,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark" th:fragment="navbar">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">My Blog App</a>
+        <a class="navbar-brand" href="/">My Blog App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
